exporting the Arn of the Custom Resource Provider Lambda

--- a/create-ecs-service/saml.yaml
+++ b/create-ecs-service/saml.yaml
@@ -2,6 +2,11 @@ AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 Description: Creates BlueGreen ecs service which is not supported by cloudformation by default as of now
 
+Parameters:
+  EnvironmentName:
+    Type: String
+    Default: balman
+
 Resources:
   CreateBGServiceRole:
     Type: AWS::IAM::Role
@@ -40,3 +45,10 @@ Resources:
       Handler: main
       Runtime: go1.x
       Role: !GetAtt CreateBGServiceRole.Arn
+
+Outputs:
+  CreateBGServiceLambdaArn:
+    Description: Arn of the custom ECS service lambda
+    Value: !GetAtt CreateBGServiceLambda.Arn
+    Export:
+      Name: !Join [':', [!Ref EnvironmentName, 'CreateBGServiceLambdaArn']]
